deploy/kubernetes/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: valmiki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: ghcr.io/rnoonegen/valmiki-client:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: valmiki
spec:
  selector:
    app: client
  ports:
    - port: 80
      targetPort: 80
