deploy/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: valmiki
  namespace: valmiki
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "26m"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: server
                port:
                  number: 5000
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: server
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 80
